==> iauther/Demo/platform/chip/gd/gd32f4xx/dal/nand.c <==
#include "platform.h"
#include "log.h"
#include "dal/nand.h"
#include "dal/delay.h"

static u8 nand_reset(void)
{
    *(vu8*)(NAND_ADDRESS|NAND_CMD)=NAND_RESET;	//复位NAND
    if(wait_ready()==NSTA_READY)return 0;//复位成功
    else return 1;								//复位失败
}

void HAL_NAND_MspInit(NAND_HandleTypeDef *hnand)
{
	GPIO_InitTypeDef GPIO_InitStruct = {0};

    __HAL_RCC_FMC_CLK_ENABLE();		// 使能FMC时钟
    __HAL_RCC_GPIOD_CLK_ENABLE();	// 使能GPIOD时钟
    __HAL_RCC_GPIOE_CLK_ENABLE();	// 使能GPIOE时钟
    __HAL_RCC_GPIOG_CLK_ENABLE();	// 使能GPIOG时钟

	// PD13 NWP
	GPIO_InitStruct.Pin = GPIO_PIN_13;
    GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;  		// 推挽输出
    GPIO_InitStruct.Pull = GPIO_NOPULL;					// 没有上/下拉
    GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;  		// 低速
    HAL_GPIO_Init(GPIOD, &GPIO_InitStruct);

	// PD6 R/B引脚FMC_NWAIT
	GPIO_InitStruct.Pin = GPIO_PIN_6;
    GPIO_InitStruct.Mode = GPIO_MODE_INPUT;				// 输入
    GPIO_InitStruct.Pull = GPIO_PULLUP;					// 上拉
    GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;	// 高速
    HAL_GPIO_Init(GPIOD, &GPIO_InitStruct);

	// PG9 FMC_NCE
    GPIO_InitStruct.Pin = GPIO_PIN_9;
    GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
    GPIO_InitStruct.Pull = GPIO_NOPULL;
    GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
	GPIO_InitStruct.Alternate = GPIO_AF12_FMC;			// 复用为FMC
    HAL_GPIO_Init(GPIOG, &GPIO_InitStruct);

    // PD0,1,4,5,11,12,14,15
    GPIO_InitStruct.Pin = GPIO_PIN_0 | GPIO_PIN_1 | GPIO_PIN_4 | GPIO_PIN_5| \
                          GPIO_PIN_11 | GPIO_PIN_12 | GPIO_PIN_14 | GPIO_PIN_15;
    GPIO_InitStruct.Pull = GPIO_NOPULL;
    HAL_GPIO_Init(GPIOD, &GPIO_InitStruct);

    // PE7,8,9,10
    GPIO_InitStruct.Pin = GPIO_PIN_7 | GPIO_PIN_8 | GPIO_PIN_9 | GPIO_PIN_10;
    HAL_GPIO_Init(GPIOE, &GPIO_InitStruct);
}

u8 nand_init(void)
{
    FMC_NAND_PCC_TimingTypeDef ComSpaceTiming, AttSpaceTiming;

    nand_mpu_config();
    NAND_Handler.Instance=FMC_Bank3_R;
    NAND_Handler.Init.NandBank=FMC_NAND_BANK3;                          //NAND挂在BANK3上
    NAND_Handler.Init.Waitfeature=FMC_NAND_PCC_WAIT_FEATURE_DISABLE;    //关闭等待特性
    NAND_Handler.Init.MemoryDataWidth=FMC_NAND_PCC_MEM_BUS_WIDTH_8;     //8位数据宽度
    NAND_Handler.Init.EccComputation=FMC_NAND_ECC_DISABLE;              //禁止ECC
    NAND_Handler.Init.ECCPageSize=FMC_NAND_ECC_PAGE_SIZE_512BYTE;       //ECC页大小为512字节
    NAND_Handler.Init.TCLRSetupTime=10;                                 //设置TCLR(tCLR=CLE到RE的延时)=(TCLR+TSET+2)*THCLK,THCLK=1/200M=5ns
    NAND_Handler.Init.TARSetupTime=10;                                  //设置TAR(tAR=ALE到RE的延时)=(TAR+TSET+1)*THCLK,THCLK=1/200M=5n。

	ComSpaceTiming.SetupTime=1;        //建立时间
    ComSpaceTiming.WaitSetupTime=3;    //等待时间
    ComSpaceTiming.HoldSetupTime=2;    //保持时间
    ComSpaceTiming.HiZSetupTime=1;     //高阻态时间

    AttSpaceTiming.SetupTime=1;        //建立时间
    AttSpaceTiming.WaitSetupTime=3;    //等待时间
    AttSpaceTiming.HoldSetupTime=2;    //保持时间
    AttSpaceTiming.HiZSetupTime=1;     //高阻态时间

    HAL_NAND_Init(&NAND_Handler,&ComSpaceTiming,&AttSpaceTiming);
    nand_reset();       		        //复位NAND
    delay_ms(100);

    nand_attr.id=read_id();	        //读取ID
    LOGD("NAND ID:%#x\r\n",nand_attr.id);

	set_mode(4);			        //设置为MODE4,高速模式
    if(nand_attr.id==MT29F16G08ABABA)    //NAND为MT29F16G08ABABA
    {
        nand_attr.page_totalsize=4320;
        nand_attr.page_mainsize=4096;
        nand_attr.page_sparesize=224;
        nand_attr.block_pagenum=128;
        nand_attr.plane_blocknum=2048;
        nand_attr.block_totalnum=4096;
    }
    else if(nand_attr.id==MT29F4G08ABADA)//NAND为MT29F4G08ABADA
    {
        nand_attr.page_totalsize=2112;
        nand_attr.page_mainsize=2048;
        nand_attr.page_sparesize=64;
        nand_attr.block_pagenum=64;
        nand_attr.plane_blocknum=2048;
        nand_attr.block_totalnum=4096;
    }
	else
		return 1;	//错误，返回

	HAL_GPIO_WritePin(GPIOD, GPIO_PIN_13, GPIO_PIN_SET);	// 取消写保护

    return 0;
}

u8 nand_read_page(u32 PageNum,u16 ColNum,u8 *pBuffer,u16 NumByteToRead)
{
    vu16 i=0;
	u8 res=0;
	u8 eccnum=0;		//需要计算的ECC个数，每NAND_ECC_SECTOR_SIZE字节计算一个ecc
	u8 eccstart=0;		//第一个ECC值所属的地址范围
	u8 errsta=0;
	u8 *p;
     *(vu8*)(NAND_ADDRESS|NAND_CMD)=NAND_AREA_A;
    //发送地址
    *(vu8*)(NAND_ADDRESS|NAND_ADDR)=(u8)ColNum;
    *(vu8*)(NAND_ADDRESS|NAND_ADDR)=(u8)(ColNum>>8);
    *(vu8*)(NAND_ADDRESS|NAND_ADDR)=(u8)PageNum;
    *(vu8*)(NAND_ADDRESS|NAND_ADDR)=(u8)(PageNum>>8);
    *(vu8*)(NAND_ADDRESS|NAND_ADDR)=(u8)(PageNum>>16);
    *(vu8*)(NAND_ADDRESS|NAND_CMD)=NAND_AREA_TRUE1;
    //下面两行代码是等待R/B引脚变为低电平，其实主要起延时作用的，等待NAND操作R/B引脚。因为我们是通过
    //将STM32的NWAIT引脚(NAND的R/B引脚)配置为普通IO，代码中通过读取NWAIT引脚的电平来判断NAND是否准备
    //就绪的。这个也就是模拟的方法，所以在速度很快的时候有可能NAND还没来得及操作R/B引脚来表示NAND的忙
    //闲状态，结果我们就读取了R/B引脚,这个时候肯定会出错的，事实上确实是会出错!大家也可以将下面两行
    //代码换成延时函数,只不过这里我们为了效率所以没有用延时函数。
	res=wait_rb(0);			//等待RB=0
    if(res)return NSTA_TIMEOUT;	//超时退出
    //下面2行代码是真正判断NAND是否准备好的
	res=wait_rb(1);			//等待RB=1
    if(res)return NSTA_TIMEOUT;	//超时退出
	if(NumByteToRead%NAND_ECC_SECTOR_SIZE)//不是NAND_ECC_SECTOR_SIZE的整数倍，不进行ECC校验
	{
		//读取NAND FLASH中的值
		for(i=0;i<NumByteToRead;i++)
		{
			*(vu8*)pBuffer++ = *(vu8*)NAND_ADDRESS;
		}
	}else
	{
		eccnum=NumByteToRead/NAND_ECC_SECTOR_SIZE;			//得到ecc计算次数
		eccstart=ColNum/NAND_ECC_SECTOR_SIZE;
		p=pBuffer;
		for(res=0;res<eccnum;res++)
		{
			FMC_Bank3_R->PCR|=1<<6;						//使能ECC校验
			for(i=0;i<NAND_ECC_SECTOR_SIZE;i++)				//读取NAND_ECC_SECTOR_SIZE个数据
			{
				*(vu8*)pBuffer++ = *(vu8*)NAND_ADDRESS;
			}
			while(!(FMC_Bank3_R->SR&(1<<6)));				//等待FIFO空
			nand_attr.ecc_hdbuf[res+eccstart]=FMC_Bank3_R->ECCR;//读取硬件计算后的ECC值
			FMC_Bank3_R->PCR&=~(1<<6);						//禁止ECC校验
		}
		i=nand_attr.page_mainsize+0X10+eccstart*4;			//从spare区的0X10位置开始读取之前存储的ecc值
		nand_delay(30);//等待tADL
		*(vu8*)(NAND_ADDRESS|NAND_CMD)=0X05;				//随机读指令
		//发送地址
		*(vu8*)(NAND_ADDRESS|NAND_ADDR)=(u8)i;
		*(vu8*)(NAND_ADDRESS|NAND_ADDR)=(u8)(i>>8);
		*(vu8*)(NAND_ADDRESS|NAND_CMD)=0XE0;				//开始读数据
		nand_delay(30);//等待tADL
		pBuffer=(u8*)&nand_attr.ecc_rdbuf[eccstart];
		for(i=0;i<4*eccnum;i++)								//读取保存的ECC值
		{
			*(vu8*)pBuffer++= *(vu8*)NAND_ADDRESS;
		}
		for(i=0;i<eccnum;i++)								//检验ECC
		{
			if(nand_attr.ecc_rdbuf[i+eccstart]!=nand_attr.ecc_hdbuf[i+eccstart])//不相等,需要校正
			{
				//sprintf(printStr, "err hd,rd:0x%x,0x%x\r\n",nand_dev.ecc_hdbuf[i+eccstart],nand_dev.ecc_rdbuf[i+eccstart]);
                //LOGD(printStr);
 				//sprintf(printStr, "eccnum,eccstart:%d,%d\r\n",eccnum,eccstart);
                //DEBUG_PRINTF(printStr);
				//sprintf(printStr, "PageNum,ColNum:%d,%d\r\n",PageNum,ColNum);
                //DEBUG_PRINTF(printStr);

				res=ecc_correct(p+NAND_ECC_SECTOR_SIZE*i,nand_attr.ecc_rdbuf[i+eccstart],nand_attr.ecc_hdbuf[i+eccstart]);//ECC校验
				if(res)errsta=NSTA_ECC2BITERR;				//标记2BIT及以上ECC错误
				else errsta=NSTA_ECC1BITERR;				//标记1BIT ECC错误
			}
		}
	}
    if(wait_ready()!=NSTA_READY)errsta=NSTA_ERROR;	//失败
    return errsta;	//成功
}

u8 nand_write_page(u32 PageNum,u16 ColNum,u8 *pBuffer,u16 NumByteToWrite)
{
    vu16 i=0;
	u8 res=0;
	u8 eccnum=0;		//需要计算的ECC个数，每NAND_ECC_SECTOR_SIZE字节计算一个ecc
	u8 eccstart=0;		//第一个ECC值所属的地址范围

	*(vu8*)(NAND_ADDRESS|NAND_CMD)=NAND_WRITE0;
    //发送地址
    *(vu8*)(NAND_ADDRESS|NAND_ADDR)=(u8)ColNum;
    *(vu8*)(NAND_ADDRESS|NAND_ADDR)=(u8)(ColNum>>8);
    *(vu8*)(NAND_ADDRESS|NAND_ADDR)=(u8)PageNum;
    *(vu8*)(NAND_ADDRESS|NAND_ADDR)=(u8)(PageNum>>8);
    *(vu8*)(NAND_ADDRESS|NAND_ADDR)=(u8)(PageNum>>16);
	nand_delay(30);//等待tADL
	if(NumByteToWrite%NAND_ECC_SECTOR_SIZE)//不是NAND_ECC_SECTOR_SIZE的整数倍，不进行ECC校验
	{
		for(i=0;i<NumByteToWrite;i++)		//写入数据
		{
			*(vu8*)NAND_ADDRESS=*(vu8*)pBuffer++;
		}
	}else
	{
		eccnum=NumByteToWrite/NAND_ECC_SECTOR_SIZE;			//得到ecc计算次数
		eccstart=ColNum/NAND_ECC_SECTOR_SIZE;
 		for(res=0;res<eccnum;res++)
		{
			FMC_Bank3_R->PCR|=1<<6;						//使能ECC校验
			for(i=0;i<NAND_ECC_SECTOR_SIZE;i++)				//写入NAND_ECC_SECTOR_SIZE个数据
			{
				*(vu8*)NAND_ADDRESS=*(vu8*)pBuffer++;
			}
			while(!(FMC_Bank3_R->SR&(1<<6)));				//等待FIFO空
			nand_attr.ecc_hdbuf[res+eccstart]=FMC_Bank3_R->ECCR;	//读取硬件计算后的ECC值
  			FMC_Bank3_R->PCR&=~(1<<6);						//禁止ECC校验
		}
		i=nand_attr.page_mainsize+0X10+eccstart*4;			//计算写入ECC的spare区地址
		nand_delay(30);//等待
		*(vu8*)(NAND_ADDRESS|NAND_CMD)=0X85;				//随机写指令
		//发送地址
		*(vu8*)(NAND_ADDRESS|NAND_ADDR)=(u8)i;
		*(vu8*)(NAND_ADDRESS|NAND_ADDR)=(u8)(i>>8);
		nand_delay(30);//等待tADL
		pBuffer=(u8*)&nand_attr.ecc_hdbuf[eccstart];
		for(i=0;i<eccnum;i++)					//写入ECC
		{
			for(res=0;res<4;res++)
			{
				*(vu8*)NAND_ADDRESS=*(vu8*)pBuffer++;
			}
		}
	}
    *(vu8*)(NAND_ADDRESS|NAND_CMD)=NAND_WRITE_TURE1;
    if(wait_ready()!=NSTA_READY)return NSTA_ERROR;//失败
    return 0;//成功
}

u8 nand_erase_block(u32 BlockNum)
{
	if(nand_attr.id==MT29F16G08ABABA)BlockNum<<=7;  	//将块地址转换为页地址
    else if(nand_attr.id==MT29F4G08ABADA)BlockNum<<=6;
    *(vu8*)(NAND_ADDRESS|NAND_CMD)=NAND_ERASE0;
    //发送块地址
    *(vu8*)(NAND_ADDRESS|NAND_ADDR)=(u8)BlockNum;
    *(vu8*)(NAND_ADDRESS|NAND_ADDR)=(u8)(BlockNum>>8);
    *(vu8*)(NAND_ADDRESS|NAND_ADDR)=(u8)(BlockNum>>16);
    *(vu8*)(NAND_ADDRESS|NAND_CMD)=NAND_ERASE1;
	if(wait_ready()!=NSTA_READY)return NSTA_ERROR;//失败
    return 0;	//成功
}

void nand_erase_chip(void)
{
    u8 status;
    u16 i=0;
    for(i=0;i<nand_attr.block_totalnum;i++) //循环擦除所有的块
    {
        status=nand_erase_block(i);
        if(status)
        {
            LOGE("Erase %d block fail!!，错误码为%d\r\n",i,status);//擦除失败
        }
    }
}
